# glassy

./: .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml  tox.ini
glassy/: __about__.py  __main__.py  configuration.py
tests/: test_metadata.py
