[tool.poetry]
name = "glassy"
version = "0.1.0"
license = "MIT"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
description = "ASCII network status map generator"
repository = "https://github.com/enpaul/glassy/"
packages = [
  {include = "glassy/py.typed"},
  {include = "tests/*.py", format = "sdist"}
]
keywords = ["terminal", "ascii", "network", "monitoring", "dashboard"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.4"
requests = "^2.27.1"
"ruamel.yaml" = "^0.17.21"
marshmallow = "^3.16.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^22.3.0"
blacken-docs = "^1.8.0"
ipython = "^7.18.1"
mdformat = "^0.6"
mdformat-gfm = "^0.2"
mypy = "^0.930"
pre-commit = "^2.7.1"
pre-commit-hooks = "^3.3.0"
pylint = "^2.4.4"
pytest = "^6.0.2"
pytest-cov = "^2.10.1"
reorder-python-imports = "^2.3.5"
safety = "^1.9.0"
toml = "^0.10.1"
tox = "^3.20.0"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.3"}
types-toml = "^0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
